[gd_scene load_steps=2 format=2]

[ext_resource path="res://addons/Actions/EditorInspectorPlugin/CostEditor/NewCost.gd" type="Script" id=1]



[node name="Control" type="PanelContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_bottom = -655.0
size_flags_vertical = 4
script = ExtResource( 1 )

[node name="HBoxContainer" type="HBoxContainer" parent="."]
margin_left = 7.0
margin_top = 10.0
margin_right = 1273.0
margin_bottom = 54.0
size_flags_horizontal = 3
size_flags_vertical = 4
custom_constants/separation = 10

[node name="VBoxContainer" type="GridContainer" parent="HBoxContainer"]
margin_right = 1236.0
margin_bottom = 44.0
size_flags_horizontal = 3
size_flags_vertical = 0
custom_constants/vseparation = 0
columns = 2

[node name="TypeLabel" type="Label" parent="HBoxContainer/VBoxContainer"]
margin_top = 3.0
margin_right = 616.0
margin_bottom = 17.0
size_flags_horizontal = 3
text = "Cost"

[node name="TypeValue" type="OptionButton" parent="HBoxContainer/VBoxContainer"]
margin_left = 620.0
margin_right = 1236.0
margin_bottom = 20.0
size_flags_horizontal = 3
text = "HP"
items = [ "HP", null, false, 0, false, "MP", null, false, 1, null, "Gold", null, false, 2, null ]
selected = 0

[node name="AmountLabel" type="Label" parent="HBoxContainer/VBoxContainer"]
margin_top = 25.0
margin_right = 616.0
margin_bottom = 39.0
size_flags_horizontal = 3
text = "Amount"

[node name="AmountValue" type="LineEdit" parent="HBoxContainer/VBoxContainer"]
margin_left = 620.0
margin_top = 20.0
margin_right = 1236.0
margin_bottom = 44.0
size_flags_horizontal = 3
size_flags_vertical = 4

[node name="Button" type="Button" parent="HBoxContainer"]
margin_left = 1246.0
margin_top = 12.0
margin_right = 1266.0
margin_bottom = 32.0
size_flags_vertical = 4
text = "X"
flat = true

[connection signal="item_selected" from="HBoxContainer/VBoxContainer/TypeValue" to="." method="id_changed"]
[connection signal="text_entered" from="HBoxContainer/VBoxContainer/AmountValue" to="." method="value_changed"]
[connection signal="pressed" from="HBoxContainer/Button" to="." method="delete_cost"]
